--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 reqwest = "^0.9.20"
 structopt = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
