--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Christian Wood <cwood@tpt.org>"]
 edition = "2018"
 
 [dependencies]
-reqwest = "^0.11.3"
+reqwest = { version = "^0.11.3", features = ["blocking", "json"] }
 structopt = "0.3.21"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.64"
+serde_derive = "1.0"
