--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ structopt = "0.3.21"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.64"
 serde_derive = "1.0"
+elasticsearch = "7.14.0-alpha.1"
+tokio = { version = "*", features = ["full"] }
